--- a/frontend/swipebyte/src/index.css
+++ b/frontend/swipebyte/src/index.css
@@ -13,8 +13,15 @@
 
 body {
   margin: 0;
-  background-color: #f8f4f0;
+  background: url('/light_food_background.webp') no-repeat center center fixed;
+  background-size: cover;
+
   color: #333;
+}
+body[data-bs-theme='dark'] {
+  background: url('/dark_food_background.jpg') no-repeat center center fixed;
+  background-size: cover;
+  color: #f8f9fa;
 }
 
 .swipe-card {
