--- a/frontend/swipebyte/src/index.css
+++ b/frontend/swipebyte/src/index.css
@@ -13,7 +13,7 @@
 
 body {
   margin: 0;
-  background: url('/light_food_background.webp') no-repeat center center fixed;
+  background: url('/light_food_background.jpg') no-repeat center center fixed;
   background-size: cover;
 
   color: #333;
